@@ -12,6 +12,8 @@ What's New in Python 2.4.6c1?
 Core and builtins
 -----------------
 
+- Issue #4317: Fixed a crash in the imageop.rgb2rgb8() function.
+
 - Issue #4230: Fix a crash when a class has a custom __getattr__ and an
   __getattribute__ method that deletes the __getattr__ attribute.
 
